<resources>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="app_name" translatable="false">Borked3DS</string>
    <string name="app_disclaimer">This software will run games for the Nintendo 3DS handheld game console. No game titles are included.\n\nBefore you can begin with emulating, please select a folder to store Borked3DS\'s user data in.\n\nWhat\'s this:\n<a href='https://web.archive.org/web/20240304193549/https://github.com/Borked3DS/Borked3DS/wiki/Borked3DS-Android-user-data-and-storage'>Wiki - Borked3DS Android user data and storage</a></string>
    <string name="app_notification_channel_name" translatable="false">Borked3DS</string>
    <string name="app_notification_channel_id" translatable="false">Borked3DS</string>
    <string name="app_notification_channel_description">Borked3DS emulator notifications</string>
    <string name="app_notification_running">Borked3DS is Running</string>
    <string name="app_game_install_description">Next, you will need to select a Game Folder. Borked3DS will display all of the 3DS ROMs inside of the selected folder in the app.\n\nCIA ROMs, updates and DLC will need to be installed separately by clicking on the folder icon and selecting Install CIA.</string>
    <string name="id_label">ID</string>
    <string name="file_label">File</string>
    <string name="unknown_error">Unknown error</string>
    <string name="grid_menu_core_settings">Settings</string>
    <string name="home_options">Options</string>
    <string name="home_search">Search</string>
    <string name="home_games">Games</string>
    <string name="settings_description">Configure emulator settings</string>
    <string name="install_game_content">Install CIA file</string>
    <string name="install_game_content_description">Install games, updates or DLC</string>
    <string name="share_log">Share Log</string>
    <string name="share_log_description">Share Borked3DS\'s log file to debug issues</string>
    <string name="gpu_driver_manager">GPU Driver Manager</string>
    <string name="install_gpu_driver">Install GPU driver</string>
    <string name="install_gpu_driver_description">Install alternative drivers for potentially better performance or accuracy</string>
    <string name="driver_already_installed">Driver already installed</string>
    <string name="custom_driver_not_supported">Custom drivers not supported</string>
    <string name="custom_driver_not_supported_description">Custom driver loading isn\'t currently supported for this device.\nCheck this option again in the future to see if support was added!</string>
    <string name="share_log_not_found">No log file found</string>
    <string name="search_location">Search Locations</string>
    <string name="search_location_description">Locations to search for 3DS roms</string>
    <string name="delete_search_location">Delete this Search Location</string>
    <string name="add">Add</string>
    <string name="add_search_location">Add a Search Location</string>
    <string name="search_locations_count">%1$s Search Location%2$s selected</string>
    <string name="search_location_add_success">Search Location added successfully</string>
    <string name="search_location_delete_success">Search Location deleted successfully</string>
    <string name="search_location_duplicated">Search Location already added</string>
    <string name="undo">Undo</string>
    <string name="about">About</string>
    <string name="borked3ds_description">An experimental open-source 3DS emulator</string>
    <string name="about_description">Build version, credits, and more</string>
    <string name="games_dir_selected">Games directory selected</string>
    <string name="select_borked3ds_user_folder_home_description">Changes the files that Borked3DS uses to load games</string>
    <string name="theme_and_color_description">Modify the look of the app</string>
    <string name="install_cia_title">Install CIA</string>
    <string name="favorite">Favorite</string>
    <string name="favorite_description">Mark this game as a favorite</string>
    <string name="select_gpu_driver">Select GPU driver</string>
    <string name="select_gpu_driver_title">Would you like to replace your current GPU driver?</string>
    <string name="select_gpu_driver_install">Install</string>
    <string name="select_gpu_driver_default">Default</string>
    <string name="select_gpu_driver_install_success">Installed %s</string>
    <string name="select_gpu_driver_use_default">Using default GPU driver</string>
    <string name="select_gpu_driver_error">Invalid driver selected, using system default!</string>
    <string name="system_gpu_driver">System GPU driver</string>
    <string name="installing_driver">Installing driver…</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="contributors">Contributors</string>
    <string name="contributors_description">Made with \u2764 from the Borked3DS team</string>
    <string name="contributors_link">https://github.com/Borked3DS/Borked3DS/graphs/contributors</string>
    <string name="licenses_description">Projects that make Borked3DS for Android possible</string>
    <string name="build">Build</string>
    <string name="licenses">Licenses</string>
    <string name="support_link">https://github.com/Borked3DS/Borked3DS/discussions</string>
    <string name="website_link">https://borked3ds.github.io/</string>
    <string name="github_link">https://github.com/Borked3DS/Borked3DS</string>
    <string name="welcome">Welcome!</string>
    <string name="welcome_description">Learn how to setup &lt;b>Borked3DS&lt;/b> and jump into emulation.</string>
    <string name="get_started">Get started</string>
    <string name="step_complete">Complete!</string>
    <string name="games">Games</string>
    <string name="games_description">Select your &lt;b>Games&lt;/b> folder with the button below.</string>
    <string name="done">Done</string>
    <string name="done_description">You\'re all set.\nEnjoy your games!</string>
    <string name="text_continue">Continue</string>
    <string name="add_games">Add Games</string>
    <string name="notifications">Notifications</string>
    <string name="notifications_description">Grant the notification permission with the button below.</string>
    <string name="give_permission">Grant permission</string>
    <string name="notification_warning">Skip granting the notification permission?</string>
    <string name="notification_warning_description">Borked3DS won\'t be able to notify you of important information.</string>
    <string name="camera_permission">Camera</string>
    <string name="camera_permission_description">Grant the camera permission below to emulate the 3DS camera.</string>
    <string name="microphone_permission">Microphone</string>
    <string name="microphone_permission_description">Grant the microphone permission below to emulate the 3DS microphone.</string>
    <string name="permission_denied">Permission denied</string>
    <string name="add_games_warning">Skip selecting games folder?</string>
    <string name="add_games_warning_description">Games won\'t be displayed in the Games list if a folder isn\'t selected.</string>
    <string name="add_games_warning_help">https://web.archive.org/web/20240304210021/https://borked3ds-emu.org/wiki/dumping-game-cartridges/</string>
    <string name="warning_help">Help</string>
    <string name="warning_skip">Skip</string>
    <string name="warning_cancel">Cancel</string>
    <string name="select_borked3ds_user_folder">Select User Folder</string>
    <string name="select_borked3ds_user_folder_description"><![CDATA[Select your <a href="https://web.archive.org/web/20240304193549/https://github.com/Borked3DS/Borked3DS/wiki/Borked3DS-Android-user-data-and-storage">user data</a> directory with the button below.]]></string>
    <string name="select">Select</string>
    <string name="cannot_skip">You can\'t skip this step</string>
    <string name="cannot_skip_directory_description">This step is required to allow Borked3DS to work. Please select a directory and then you can continue.</string>
    <string name="cannot_skip_directory_help">https://web.archive.org/web/20240304193549/https://github.com/Borked3DS/Borked3DS/wiki/Borked3DS-Android-user-data-and-storage</string>
    <string name="set_up_theme_settings">Theme Settings</string>
    <string name="setup_theme_settings_description">Configure your theme preferences for Borked3DS.</string>
    <string name="setup_set_theme">Set Theme</string>
    <string name="search_and_filter_games">Search and Filter Games</string>
    <string name="home_search_games">Search Games</string>
    <string name="search_recently_played">Recently Played</string>
    <string name="search_recently_added">Recently Added</string>
    <string name="search_installed">Installed</string>
    <string name="controller_buttons">Face Buttons</string>
    <string name="controller_circlepad">Circle Pad</string>
    <string name="controller_c">C-Stick</string>
    <string name="controller_hotkeys">Hotkeys</string>
    <string name="controller_triggers">Shoulder Buttons</string>
    <string name="controller_trigger">Trigger</string>
    <string name="controller_dpad">Directional Pad</string>
    <string name="controller_dpad_axis">Directional Pad (Axis)</string>
    <string name="controller_dpad_axis_description">Some controllers may not be able to map their Directional Pad as an axis. If that is the case, use the <b>Directional Pad (Button)</b> section below instead.</string>
    <string name="controller_dpad_button">Directional Pad (Button)</string>
    <string name="controller_dpad_button_description">Only map these buttons if the <b>Directional Pad (Axis)</b> settings above do not work with your controller.</string>
    <string name="controller_axis_vertical">Up/Down Axis</string>
    <string name="controller_axis_horizontal">Left/Right Axis</string>
    <string name="direction_up">Up</string>
    <string name="direction_down">Down</string>
    <string name="direction_left">Left</string>
    <string name="direction_right">Right</string>
    <string name="input_dialog_title">Bind %1$s %2$s</string>
    <string name="input_dialog_description">Press or move an input.</string>
    <string name="input_binding">Input Binding</string>
    <string name="input_binding_description">Press or move an input to bind it to %1$s.</string>
    <string name="input_binding_description_vertical_axis">Move your joystick up or down.</string>
    <string name="input_binding_description_horizontal_axis">Move your joystick left or right.</string>
    <string name="button_a" translatable="false">A</string>
    <string name="button_b" translatable="false">B</string>
    <string name="button_select" translatable="false">SELECT</string>
    <string name="button_start" translatable="false">START</string>
    <string name="button_home">HOME</string>
    <string name="button_swap">Swap Screens</string>
    <string name="button_x" translatable="false">X</string>
    <string name="button_y" translatable="false">Y</string>
    <string name="multiplayer">Multiplayer</string>
    <string name="multiplayer_create_room">Create</string>
    <string name="multiplayer_join_room">Join</string>
    <string name="multiplayer_username">Username</string>
    <string name="multiplayer_ip_address">IP Address</string>
    <string name="multiplayer_ip_port">Port</string>
    <string name="multiplayer_exit_room">Exit Room</string>
    <string name="multiplayer_password">Password</string>
    <string name="multiplayer_room_name">Room Name</string>
    <string name="multiplayer_max_players_value">Max Players: %d</string>
    <string name="multiplayer_chat">Chat</string>
    <string name="chat">Chat</string>
    <string name="type_message">Type message……</string>
    <string name="send_message">Send Message</string>
    <string name="multiplayer_moderation">Moderation</string>
</resources>