<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.bottomsheet.BottomSheetDragHandleView
            android:id="@+id/drag_handle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/text_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:text="@string/multiplayer"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:textColor="?attr/colorOnSurface" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/list_multiplayer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_chat"
                style="@style/Widget.Material3.Button.TonalButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="8dp"
                android:enabled="true"
                android:text="@string/multiplayer_chat"
                app:cornerRadius="16dp"
                app:icon="@drawable/ic_chat" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_moderation"
                style="@style/Widget.Material3.Button.TonalButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="8dp"
                android:enabled="true"
                android:text="@string/multiplayer_moderation"
                app:cornerRadius="16dp"
                app:icon="@drawable/ic_user" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_leave"
                style="@style/Widget.Material3.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:text="@string/multiplayer_exit_room"
                app:cornerRadius="16dp"
                app:icon="@drawable/ic_exit" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>
